--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./styles/reset.css">
+  <link rel="stylesheet" href="./styles/styles.css">
   
   <title>Frontend Mentor | Blog preview card</title>
 
 </head>
 <body>
+  <main>
+    <section class="card">
+      <img src="./assets/images/illustration-article.svg" alt="Illustration">
+    </section>
+  </main>
 
   <!-- Learning
 
