Add Learning tag

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <main>
     <section class="card">
       <img src="./assets/images/illustration-article.svg" alt="Illustration">
+      <p class="tag">Learning</p>
     </section>
   </main>
 
-  <!-- Learning
 
-  Published 21 Dec 2023
+  <!-- Published 21 Dec 2023
 
   HTML & CSS foundations
 
