--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <section class="card">
       <img src="./assets/images/illustration-article.svg" alt="Illustration">
       <p class="tag">Learning</p>
+      <p class="date">Published 21 Dec 2023</p>
     </section>
   </main>
 
 
-  <!-- Published 21 Dec 2023
+  
 
-  HTML & CSS foundations
+  <!-- HTML & CSS foundations
 
   These languages are the backbone of every website, defining structure, content, and presentation.
 
