--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
       <img src="./assets/images/illustration-article.svg" alt="Illustration">
       <p class="tag">Learning</p>
       <p class="date">Published 21 Dec 2023</p>
+      <h1>HTML & CSS foundations</h1>
     </section>
   </main>
 
 
   
 
-  <!-- HTML & CSS foundations
+  <!-- 
 
   These languages are the backbone of every website, defining structure, content, and presentation.
 
