--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <p class="tag">Learning</p>
       <p class="date">Published 21 Dec 2023</p>
       <h1>HTML & CSS foundations</h1>
+      <p class="desc">These languages are the backbone of every website, defining structure, content, and presentation.</p>
     </section>
   </main>
 
@@ -26,7 +27,7 @@
 
   <!-- 
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
+  
 
   Greg Hooper -->
   
