--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
       <p class="date">Published 21 Dec 2023</p>
       <h1>HTML & CSS foundations</h1>
       <p class="desc">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <div class="author">
+        <img class="avatar" src="./assets/images/image-avatar.webp" alt="Avatar">
+        <p class="author-name">Greg Hooper</p>
+      </div>
     </section>
   </main>
 
 
   
 
-  <!-- 
+  
 
   
 
-  Greg Hooper -->
+  
   
 </body>
 </html>
